tests/ui/typeck/function_calls/new/abstract_contract.stderr
error[3656]: contract `Base` has unimplemented functions
   ╭▸ ROOT/tests/ui/typeck/function_calls/new/abstract_contract.sol:LL:CC
   │
LL │ contract Base {
   │ ┬─────── ━━━━
   │ │
   │ help: mark the contract as abstract: `abstract contract`
   ╰╴
note: unimplemented function `foo` defined in `Base`
   ╭▸ ROOT/tests/ui/typeck/function_calls/new/abstract_contract.sol:LL:CC
   │
LL │     function foo() public virtual;
   ╰╴    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

error: aborting due to 1 previous error

