tests/ui/typeck/function_calls/new/abstract_contract.sol
//@ compile-flags: -Ztypeck
// ported-from: test/libsolidity/syntaxTests/nameAndTypeResolution/029_create_abstract_contract.sol

contract Base { //~ ERROR: contract `Base` has unimplemented functions
    function foo() public virtual;
}

contract Derived {
    Base b;

    function foo() public {
        b = new Base();
    }
}
